extract github config from code to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8887
+
+github.client.id=a7984ce94e8e4c8c796d
+github.client.secret=532bc5a8e52d647936ce53d7193781f7b54acbca
+github.redirect.uri=http://localhost:8887/callback
