--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,10 @@ ucloud.ufile.region=cn-bj
 ucloud.ufile.suffix=ufileos.com
 ucloud.ufile.expires=315360000
 
-spring.datasource.url=jdbc:h2:D://H2/community
-spring.datasource.username=sa
-spring.datasource.password=123
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:mysql://10.9.69.152:3306/tree
+spring.datasource.username=root
+spring.datasource.password=hm13585658530
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=com.tree.community.mapper
