--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,9 @@ ucloud.ufile.region=cn-bj
 ucloud.ufile.suffix=ufileos.com
 ucloud.ufile.expires=315360000
 
-spring.datasource.url=jdbc:mysql://10.9.69.152:3306/tree
+spring.datasource.url=jdbc:mysql://localhost:3306/tree
 spring.datasource.username=root
-spring.datasource.password=hm13585658530
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 mybatis.configuration.map-underscore-to-camel-case=true
