使用redis、添加点赞功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,18 @@
 server.port=8887
 
 github.client.id=a7984ce94e8e4c8c796d
-github.client.secret=532bc5a8e52d647936ce53d7193781f7b54acbca
+github.client.secret=
 github.redirect.uri=http://localhost:8887/loginCallback
 
-ucloud.ufile.public-key=TOKEN_775f69ac-a3c5-45fb-a1a5-8b5518a0331b
-ucloud.ufile.private-key=81bea426-01cf-42e5-8b33-86a8254e0ca4
+ucloud.ufile.public-key=
+ucloud.ufile.private-key=
 ucloud.ufile.bucket-name=tree
 ucloud.ufile.region=cn-bj
 ucloud.ufile.suffix=ufileos.com
 ucloud.ufile.expires=315360000
+
+aliyun.access-key.id=
+aliyun.client.secret=
 
 spring.datasource.url=jdbc:mysql://localhost:3306/tree
 spring.datasource.username=root
@@ -25,4 +28,20 @@ logging.level.root=info
 logging.level.com.tree.community.mapper=debug
 logging.file.max-size=100MB
 logging.file.max-history=30
+
+spring.redis.host=127.0.0.1
+#Redis服务器连接端口
+spring.redis.port=6379
+#Redis服务器连接密码（默认为空）
+spring.redis.password=
+#连接池最大连接数（使用负值表示没有限制）
+spring.redis.lettuce.pool.max-active=100
+#连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.lettuce.pool.max-wait=-1
+#连接池中的最大空闲连接
+spring.redis.lettuce.pool.max-idle=20
+#连接池中的最小空闲连接
+spring.redis.lettuce.pool.min-idle=0
+#连接超时时间（毫秒）
+spring.redis.timeout=3000
 
