--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 server.port=8887
 
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=20MB
+
 github.client.id=a7984ce94e8e4c8c796d
 github.client.secret=
 github.redirect.uri=http://localhost:8887/loginCallback
+
+qq.client.id=
+qq.client.secret=
+qq.redirect.uri=http://localhost:8887/loginCallbackqq
 
 ucloud.ufile.public-key=
 ucloud.ufile.private-key=
