--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,13 @@ server.port=8887
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=20MB
 
-github.client.id=a7984ce94e8e4c8c796d
+github.client.id=
 github.client.secret=
 github.redirect.uri=http://localhost:8887/loginCallback
 
 qq.client.id=
 qq.client.secret=
-qq.redirect.uri=http://localhost:8887/loginCallbackqq
+qq.redirect.uri=
 
 ucloud.ufile.public-key=
 ucloud.ufile.private-key=
