添加用户界面账号中心

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8887
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=20MB
 
-github.client.id=
+github.client.id=a7984ce94e8e4c8c796d
 github.client.secret=
 github.redirect.uri=http://localhost:8887/loginCallback
 
