--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,9 @@ ucloud.ufile.expires=315360000
 
 aliyun.access-key.id=
 aliyun.client.secret=
+aliyun.endpoint=
+aliyun.bucketName=
+aliyun.urlPrefix=
 
 spring.datasource.url=jdbc:mysql://localhost:3306/tree
 spring.datasource.username=root
