增加绑定邮箱功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,10 @@ qq.client.id=
 qq.client.secret=
 qq.redirect.uri=
 
+email.smtphost=
+email.account=
+email.password=
+
 ucloud.ufile.public-key=
 ucloud.ufile.private-key=
 ucloud.ufile.bucket-name=tree
