--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,12 @@
             <version>2.9.10.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+        </dependency>
+
     </dependencies>
 
     <build>
