--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,9 +24,9 @@ ucloud.ufile.expires=315360000
 
 aliyun.access-key.id=
 aliyun.client.secret=
-aliyun.endpoint=
-aliyun.bucketName=
-aliyun.urlPrefix=
+aliyun.endpoint=oss-cn-hangzhou.aliyuncs.com
+aliyun.bucketName=treedong
+aliyun.urlPrefix=http://www.treedong.com:8090/
 
 spring.datasource.url=jdbc:mysql://localhost:3306/tree
 spring.datasource.username=root
