--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ ucloud.ufile.region=cn-bj
 ucloud.ufile.suffix=ufileos.com
 ucloud.ufile.expires=315360000
 
-aliyun.access-key.id=**
+aliyun.access-key.id=
 aliyun.client.secret=
 aliyun.endpoint=oss-cn-hangzhou.aliyuncs.com
 aliyun.bucketName=treedong
