新增积分等级功能和删除帖子、评论、消息功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,12 @@ qq.client.id=
 qq.client.secret=
 qq.redirect.uri=
 
+tencentcloud.secretId=
+tencentcloud.secretKey=
+captcha.UserIp=
+captcha.CaptchaAppId=
+captcha.AppSecretKey=
+
 email.smtphost=
 email.account=
 email.password=
@@ -24,9 +30,9 @@ ucloud.ufile.expires=315360000
 
 aliyun.access-key.id=
 aliyun.client.secret=
-aliyun.endpoint=oss-cn-hangzhou.aliyuncs.com
-aliyun.bucketName=treedong
-aliyun.urlPrefix=http://www.treedong.com:8090/
+aliyun.endpoint=
+aliyun.bucketName=
+aliyun.urlPrefix=
 
 spring.datasource.url=jdbc:mysql://localhost:3306/tree
 spring.datasource.username=root
