--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,12 @@
             <version>1.4.7</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.tencentcloudapi</groupId>
+            <artifactId>tencentcloud-sdk-java</artifactId>
+            <version>3.1.30</version>
+        </dependency>
+
     </dependencies>
 
     <build>
