修改删除帖子有关功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ email.password=
 
 ucloud.ufile.public-key=
 ucloud.ufile.private-key=
-ucloud.ufile.bucket-name=tree
+ucloud.ufile.bucket-name=
 ucloud.ufile.region=cn-bj
 ucloud.ufile.suffix=ufileos.com
 ucloud.ufile.expires=315360000
